<resources>
    <string name="app_name">Dreamscape</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="month_year_format">%d年%d月</string>

    <string name="settings_title">Settings</string>
    <string name="settings_icon_description">Settings Icon</string>
    <string name="menu_item1">账号管理</string>
    <string name="menu_item2">隐私设置</string>
    <string name="menu_item3">设备控制</string>
    <string name="menu_item4">更多</string>
    <string name="menu_item5">帮助</string>
    <string name="menu_item6">Menu Item 6</string>


</resources>